# esdicawt

./: .gitmodules  .rustfmt.toml  BENCHMARKS.md  Cargo.toml  README.md
.github/workflows/: rust.yaml
cose-key/: Cargo.toml
cose-key-confirmation/: Cargo.toml
cose-key-confirmation/src/: error.rs  lib.rs
cose-key-set/: Cargo.toml
cose-key-set/src/: error.rs  lib.rs
cose-key-thumbprint/: Cargo.toml
cose-key-thumbprint/src/: error.rs  lib.rs
cose-key/src/: codec.rs  error.rs  lib.rs  utils.rs
esdicawt/: BENCHMARKS.md  Cargo.toml  README.md
esdicawt-spec/: Cargo.toml
esdicawt-spec/src/: alg.rs  any_digest.rs  blinded_claims.rs  inlined_cbor.rs  issuance.rs  key_binding.rs  lib.rs  redacted_claims.rs  select.rs  verified.rs
esdicawt-spec/src/issuance/: accessors.rs  sd_issued_codec.rs  sd_issued_payload_codec.rs  sd_payload_codec.rs  sd_protected_codec.rs  sd_unprotected_codec.rs  unprotected_issued_codec.rs
esdicawt-spec/src/key_binding/: accessors.rs  kbt_codec.rs  kbt_payload_codec.rs  kbt_protected_codec.rs  kbt_unprotected_codec.rs
esdicawt/benches/: verify.rs
esdicawt/src/: any_digest.rs  holder.rs  issuer.rs  lib.rs  lookup.rs  read.rs  signature_verifier.rs  time.rs  verifier.rs
esdicawt/src/holder/: accessor.rs  error.rs  params.rs  traverse.rs  validation.rs
esdicawt/src/issuer/: error.rs  params.rs  redaction.rs
esdicawt/src/lookup/: blanket.rs  mod.rs  model.rs
esdicawt/src/verifier/: error.rs  params.rs  time.rs  walk.rs
esdicawt/tests/: fmk.rs  test_vectors.rs
spice-oidc-cwt/: Cargo.toml
spice-oidc-cwt/src/: lib.rs
status-list/: Cargo.toml
status-list/src/: error.rs  inner.rs  issuer.rs  lib.rs  lst.rs  referenced.rs  statuses.rs  twiddling.rs
status-list/src/issuer/: cose.rs  lst_mut.rs  params.rs
status-list/src/issuer/cose/: codec.rs  model.rs
status-list/tests/: test_vectors.rs
