[workspace]
members = ["cose-key-confirmation", "cose-key", "cose-key-set", "cose-key-thumbprint", "esdicawt", "esdicawt-spec", "spice-oidc-cwt", "status-list"]
resolver = "2"

[workspace.package]
version = "0.9.2"
edition = "2024"
authors = []

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
# own crates
esdicawt = { path = "esdicawt" }
esdicawt-spec = { path = "esdicawt-spec" }
cose-key = { path = "cose-key" }
cose-key-confirmation = { path = "cose-key-confirmation" }
cose-key-set = { path = "cose-key-set" }
cose-key-thumbprint = { path = "cose-key-thumbprint" }
spice-oidc-cwt = { path = "spice-oidc-cwt" }
status-list = { path = "status-list" }

# CBOR
coset = { version = "0.3", git = "https://github.com/beltram/coset.git", branch = "status-list" }
ciborium = "0.2"

# crypto
signature = "2.2"
ed25519-dalek = "2.1"
p256 = "0.13"
p384 = "0.13"
subtle = "2.6"
digest = "0.10"
sha2 = "0.10"
pkcs8 = "0.10"
rand = "0.8"
rand_core = "0.6"
getrandom = "0.2"

# codec
serde = "1.0"
serde_tuple = "1.1"
serde_bytes = "0.11"
thiserror = "2.0"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde_json = "1.0"
serde_repr = "0.1"

# misc
url = { version = "2.5", default-features = false }
tailcall = "1.0"
derive_builder = "0.20"
wasm-bindgen-test = "0.3"
enum-variants-strings = "0.3"
indexmap = "2.12"
bytes = "1.10"
flate2 = { version = "1.1", default-features = false }
tokio = { version = "1.48", default-features = true }

[patch.crates-io.ciborium]
git = "https://github.com/beltram/ciborium"
branch = "simple-value+cde"
#rev = "69c8aede"
#path = "../ciborium/ciborium"

[workspace.lints.clippy]
# Enforced Groups
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Cherry Picks
## Nursery
missing_const_for_fn = "allow"
derive_partial_eq_without_eq = "allow"
significant_drop_tightening = "allow"  # Allowed due false positives
trait_duplication_in_bounds = "allow"  # Allowed due false positives
## restriction
rc_mutex = "warn"
## Pedantic
needless_continue = "warn"
needless_for_each = "warn"
flat_map_option = "warn"
filter_map_next = "warn"
explicit_into_iter_loop = "warn"
manual_ok_or = "warn"
indexing_slicing = "warn"
unused_self = "warn"
from_iter_instead_of_collect = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
mut_mut = "warn"
option_option = "warn"
ref_option_ref = "warn"
explicit_iter_loop = "warn"
