[package]
name = "cose-key-set"
edition = "2021"
version.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
cose-key = { path = "../cose-key" }
serde.workspace = true
thiserror.workspace = true
ed25519-dalek = { workspace = true, optional = true }
p256 = { workspace = true, optional = true }
p384 = { workspace = true, optional = true }

[dev-dependencies]
cose-key-set = { path = ".", features = ["ed25519", "p256"] }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
p256.workspace = true
rand = "0.8"
coset.workspace = true
ciborium.workspace = true
hex.workspace = true

[features]
default = []
ed25519 = ["dep:ed25519-dalek", "cose-key/ed25519"]
p256 = ["dep:p256", "cose-key/p256"]
p384 = ["dep:p384", "cose-key/p384"]

[lints]
workspace = true
