[package]
name = "cose-key-set"
edition.workspace = true
version.workspace = true
description = "CoseKeySet"
authors.workspace = true

[dependencies]
cose-key.workspace = true
serde.workspace = true
thiserror.workspace = true
coset.workspace = true
indexmap = { workspace = true, features = ["serde"] }
ed25519-dalek = { workspace = true, optional = true }
p256 = { workspace = true, optional = true }
p384 = { workspace = true, optional = true }

[dev-dependencies]
cose-key-set = { workspace = true, features = ["ed25519", "p256", "p384"] }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
p256.workspace = true
rand.workspace = true
coset.workspace = true
ciborium.workspace = true
hex.workspace = true
wasm-bindgen-test.workspace = true
getrandom = { workspace = true, features = ["js"] }

[features]
default = []
ed25519 = ["dep:ed25519-dalek", "cose-key/ed25519"]
p256 = ["dep:p256", "cose-key/p256"]
p384 = ["dep:p384", "cose-key/p384"]

[lints]
workspace = true
