[package]
name = "cose-key-thumbprint"
edition.workspace = true
version.workspace = true
description = "CoseKey Thumbprint [RFC 9679]"
authors.workspace = true

[dependencies]
cose-key.workspace = true
hex.workspace = true
coset.workspace = true
ciborium.workspace = true
digest.workspace = true
serde.workspace = true
thiserror.workspace = true
ed25519-dalek = { workspace = true, optional = true }
p256 = { workspace = true, optional = true }
p384 = { workspace = true, optional = true }
subtle.workspace = true
serde_bytes.workspace = true

[dev-dependencies]
cose-key-thumbprint = { workspace = true, features = ["ed25519", "p256", "p384"] }
ciborium.workspace = true
sha2.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core", "pem"] }
p256.workspace = true
p384.workspace = true
rand.workspace = true
cose-key = { workspace = true, features = ["p256", "p384", "ed25519"] }
wasm-bindgen-test.workspace = true
getrandom = { workspace = true, features = ["js"] }

[features]
default = []
ed25519 = ["dep:ed25519-dalek", "cose-key/ed25519"]
p256 = ["dep:p256", "cose-key/p256"]
p384 = ["dep:p384", "cose-key/p384"]

[lints]
workspace = true
