[package]
name = "cose-key"
edition.workspace = true
version.workspace = true
description = "CoseKey [RFC 8152]"
authors.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
coset.workspace = true
ciborium.workspace = true
signature.workspace = true
ed25519-dalek = { workspace = true, optional = true }
p256 = { workspace = true, optional = true }
p384 = { workspace = true, optional = true }
dcbor = { workspace = true, optional = true }

[features]
default = []
ed25519 = ["dep:ed25519-dalek"]
p256 = ["dep:p256"]
p384 = ["dep:p384"]
deterministic-encoding = ["dcbor"]

[lints]
workspace = true
