[package]
name = "esdicawt-spec"
edition.workspace = true
version.workspace = true
description = "SD-CWT structs"
authors.workspace = true

[features]
default = []
status = ["dep:status-list"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_repr.workspace = true
derive_builder.workspace = true
serde_tuple.workspace = true
serde_bytes.workspace = true
coset = { workspace = true, features = ["std"] }
ciborium.workspace = true
thiserror.workspace = true
cose-key-confirmation.workspace = true
digest.workspace = true
status-list = { workspace = true, optional = true }
ahash.workspace = true
hex.workspace = true
bytes = { workspace = true, features = ["serde"] }

[lints]
workspace = true
