[package]
name = "esdicawt-spec"
edition.workspace = true
version.workspace = true
description = "SD-CWT structs"
authors.workspace = true

[features]
default = []
status = ["dep:status-list"]

[dependencies]
coset = { workspace = true, features = ["std"] }
cose-key = { workspace = true, features = ["confirmation"] }
ciborium.workspace = true
digest.workspace = true
status-list = { workspace = true, optional = true }

derive_builder.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_repr.workspace = true
serde_tuple.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true
hex.workspace = true

[lints]
workspace = true
