[package]
name = "esdicawt"
edition.workspace = true
version.workspace = true
description = "SD-CWT"
authors.workspace = true

[features]
default = []
pem = ["dep:pkcs8", "pkcs8?/pem", "cose-key-set/pem"]
der = ["dep:pkcs8", "cose-key-set/pem"]
ed25519 = ["dep:ed25519-dalek", "cose-key-confirmation/ed25519", "dep:sha2"]
p256 = ["dep:p256", "cose-key-confirmation/p256", "dep:sha2"]
p384 = ["dep:p384", "cose-key-confirmation/p384", "dep:sha2"]
test-utils = ["ed25519", "p256", "p384", "dep:sha2", "cose-key-confirmation/ed25519", "cose-key-confirmation/p256", "cose-key-confirmation/p384"]
test-vectors = ["test-utils"]

[dependencies]
esdicawt-spec.workspace = true
cose-key-set.workspace = true
cose-key-confirmation.workspace = true
signature = { workspace = true, features = ["std", "digest"] }
digest.workspace = true
rand_core = { workspace = true, features = ["std"] }
ciborium.workspace = true
thiserror.workspace = true
serde.workspace = true
pkcs8 = { workspace = true, optional = true }
tailcall.workspace = true
serde_repr.workspace = true
enum-variants-strings.workspace = true
time = { workspace = true, default-features = false }

sha2 = { optional = true, workspace = true }
ed25519-dalek = { optional = true, workspace = true, features = ["rand_core", "pem", "serde"] }
p256 = { optional = true, workspace = true }
p384 = { optional = true, workspace = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
js-sys = "0.3"
getrandom = { workspace = true, features = ["js"] }
time = { workspace = true, default-features = false, features = ["wasm-bindgen"] }

[dev-dependencies]
esdicawt = { workspace = true, features = ["pem", "der", "test-utils", "test-vectors", "ed25519", "p256", "p384"] }
serde = { workspace = true, features = ["derive"] }
cose-key-confirmation = { workspace = true, features = ["ed25519", "p256", "p384"] }
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true
wasm-bindgen-test.workspace = true
hex.workspace = true
spice-oidc-cwt = { workspace = true }
derive_builder.workspace = true
serde_repr.workspace = true

[lints]
workspace = true
