[package]
name = "spice-oidc-cwt"
edition.workspace = true
version.workspace = true
description = "OIDC standard claims for CWTs"
authors.workspace = true

[dependencies]
esdicawt.workspace = true
esdicawt-spec.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_repr.workspace = true
enum-variants-strings.workspace = true
url = { workspace = true, features = ["serde"] }
digest.workspace = true
ciborium.workspace = true

[dev-dependencies]
esdicawt = { workspace = true, features = ["test-utils", "test-vectors", "ed25519", "p256", "p384"] }
rand.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
sha2.workspace = true
wasm-bindgen-test.workspace = true

[lints]
workspace = true
