[package]
name = "spice-oidc-cwt"
edition = "2021"
version.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
esdicawt = { path = "../esdicawt" }
esdicawt-spec = { path = "../esdicawt-spec" }
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
esdicawt = { path = "../esdicawt", features = ["test-utils", "ed25519", "p256", "p384"] }
rand.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
sha2.workspace = true

[lints]
workspace = true
