[package]
name = "status-list"
edition.workspace = true
version.workspace = true
description = "Token Status List"
authors.workspace = true

[features]
default = ["issuer"] # for convenience
issuer = []
pem = ["dep:pkcs8", "pkcs8?/pem"]
rand = ["dep:rand_core", "dep:rand"]

[dependencies]
serde.workspace = true
thiserror.workspace = true

signature = { workspace = true, features = ["std"] }
digest.workspace = true
derive_builder.workspace = true
hex = { workspace = true, default-features = false }

flate2 = { workspace = true, features = ["zlib"] }
serde_repr.workspace = true
bytes = { workspace = true, features = ["serde"] }
url = { workspace = true, features = ["serde"] }
serde_bytes.workspace = true

coset.workspace = true
ciborium.workspace = true
pkcs8 = { workspace = true, optional = true }
rand_core = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

time = "0.3.41"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
js-sys = "0.3"
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
wasm-bindgen-test.workspace = true
status-list = { path = "./", features = ["rand", "issuer"] }
p256 = { workspace = true, features = ["jwk"] }
sha2.workspace = true
rand.workspace = true
serde_json = "1.0"
hex = { workspace = true, features = ["alloc"] }

[lints]
workspace = true
